fixed pagination gap

--- a/themes/texify/assets/sass/layouts/list.scss
+++ b/themes/texify/assets/sass/layouts/list.scss
@@ -209,7 +209,7 @@
 .yh-page-list {
   display: flex;
   align-items: center;
-  gap: 0.2rem;
+  gap: 0;
 }
 
 /* Arrows (‹ and ›) */
